# diff-folders

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  log.rs  main.rs  status.rs
