[package]
name = "diff-folders"
description = "This tool allows you to display differences in a list of compared folders in the terminal."
version = "0.0.1"
authors = ["zelong.wang@foxmail.com"]
repository = "https://github.com/awsome-utils/diff-folders"
keywords = ["diff", "folders", "compare", "files", "terminal"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.69"
scopeguard = "1.1"
similar = "2.2.1"
tui = { version = "0.19", default-features = false, features = ['crossterm', 'serde'] }
crossterm = { version = "0.26.0", features = [ "serde" ] }
walkdir = "2.3.2"
file_diff = "1.0.0"
log = "0.4"
flexi_logger = "0.25"
directories = "4.0.1"
futures = "0.3.26"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3